# qmkit

./: .gitignore  LICENSE  README.rst  pyproject.toml
notebooks/: Untitled1.ipynb  memo.md
qmkit/: api.py  base.py  config.py  constants.py  geometry.py  main.py  util.py
qmkit/data/: DimethylPhthalate.mol
