[tool.poetry]
name = "easy_gamess"
version = "0.1.0"
description = "gamess interface for python"
authors = ["horoiwa"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.43.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
